@@ -22,7 +22,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>January 6, 2005</p>
+<p>January 8, 2005</p>
 </center>
 
 <hr size=2 noshade>
@@ -123,9 +123,15 @@ New Breed Software</p>
 
   <dt><code><b>noquit=yes</b></code></dt>
   <dd>
-    Disable the on-screen "Quit" button.
-    (Pressing the <b>[Escape]</b> key or clicking the window's close
-    button still works.)
+    <p>Disable the on-screen "Quit" button and prevent the <b>[Escape]</b> key
+    from quitting <i>Tux&nbsp;Paint</i>.</p>
+    
+    <p>Using the <b>[Alt]</b>&nbsp;+&nbsp;<b>[F4]</b> keyboard combination
+    or clicking the window's close button (assuming you're not in
+    fullscreen mode) still works to quit <i>Tux&nbsp;Paint</i>.</p>
+
+    <p>You can also use the following keyboard combination to quit:
+    <b>[Shift]</b>&nbsp;+&nbsp;<b>[Control]</b>&nbsp;+&nbsp;<b>[Escape]</b>.</p>
   </dd>
   
   <dt><code><b>noprint=yes</b></code></dt>
