@@ -17,13 +17,13 @@ version
 </h1>
 <h3>A simple drawing program for children</h3>
 
-<p>Copyright 2004 by Bill Kendrick<br>
+<p>Copyright 2005 by Bill Kendrick<br>
 New Breed Software</p>
 
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>June 14, 2002 - December 11, 2004</p>
+<p>June 14, 2002 - January 8, 2005</p>
 </center>
 
 <hr size=2 noshade>
@@ -801,13 +801,7 @@ New Breed Software</p>
         <img src="images/tool_quit.png" width=48 height=48 alt="" align=right>
 
         <p>Clicking the "Quit" button, closing the Tux&nbsp;Paint window, or
-        pushing the "Escape" key will quit Tux&nbsp;Paint.</p>
-
-	<p>(NOTE: The "Quit" button can be disabled (e.g., with the
-        "<code>--noquit</code>" command-line option), but the <b>[Escape]</b>
-        key will still work.
-	See the "<a href="OPTIONS.html"><i>Options</i></a>"
-	documentation.)</p>
+        pushing the <b>[Escape]</b> key will quit Tux&nbsp;Paint.</p>
 	
         <p>You will first be prompted as to whether you really want to quit.</p>
 
@@ -818,6 +812,21 @@ New Breed Software</p>
         
 	<p>NOTE: If the image is saved, it will be reloaded automatically
 	the next time you run Tux&nbsp;Paint!</p>
+
+	<p><b>NOTE:</b> The "Quit" button and <b>[Escape]</b> key can be
+	disabled (e.g., by selecting "Disable&nbsp;'Quit'&nbsp;Button" in
+	<i>Tux&nbsp;Paint&nbsp;Config.</i> or running <i>Tux&nbsp;Paint</i>
+	with the "<code>--noquit</code>" command-line option).</p>
+	
+	<p>In that case, the "window&nbsp;close" button on
+	<i>Tux&nbsp;Paint's</i> title bar (if not in fullscreen mode) or
+	the <b>[Alt]</b>&nbsp;+&nbsp;<b>[F4]</b> key sequence may be used
+	to quit.</p>
+
+	<p>If neither of those are possible, the key sequence of
+	<b>[Shift]</b>&nbsp;+&nbsp;<b>[Control]</b>&nbsp;+&nbsp;<b>[Escape]</b>
+	may be used to quit.  (See the
+	"<a href="OPTIONS.html"><i>Options</i></a>" documentation.)</p>
 	
         <br clear=all>
       </dd>
